--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ body {
     z-index: 900;
     display: flex;
     flex-direction: column;
-    gap: 0;
+    gap: 2px;
     padding-left: 0;
     cursor: pointer;
 }
@@ -174,7 +174,7 @@ body {
 /* LAYOUTS */
 .centered-layout {
     text-align: center;
-    max-width: 1200px;
+    max-width: 1000px;
     width: 100%;
 }
 
@@ -183,7 +183,7 @@ body {
     grid-template-columns: 1fr 1fr;
     gap: 100px;
     width: 100%;
-    max-width: 1400px;
+    max-width: 1000px;
     align-items: center;
 }
 
@@ -406,7 +406,7 @@ body {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 30px;
-    max-width: 1300px;
+    max-width: 1000px;
     margin: 0 auto;
 }
 
@@ -427,7 +427,7 @@ body {
 .specimen-row {
     display: flex;
     gap: 40px;
-    max-width: 1300px;
+    max-width: 1000px;
     margin: 0 auto;
 }
 
@@ -440,7 +440,7 @@ body {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 30px;
-    max-width: 1300px;
+    max-width: 1000px;
     margin: 60px auto;
 }
 
@@ -496,7 +496,7 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 100px;
-    max-width: 1200px;
+    max-width: 1000px;
     margin: 0 auto;
 }
 
@@ -525,7 +525,11 @@ body {
     background: var(--banana);
 }
 
-.bg-white {
+.bg-white{
+    background: #FFFFFF;
+}
+
+.bg-linen {
     background: var(--linen);
 }
 
@@ -616,7 +620,11 @@ video {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: var(--corners);
+}
+
+#fullposter-1{
+    width:90%;
+    padding: 100px 0;
 }
 
 /* FOOTER */
