--- a/style.css
+++ b/style.css
@@ -1039,3 +1039,17 @@ video {
         font-size: 80px;
     }
 }
+
+#p5-container {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-bottom:1px solid black;
+    /* background:var(--linen); */
+}
+
+#p5-container canvas {
+    display: block;
+}
